# AP2

./: .cspell.json  .gitignore  .gitleaks.toml  .ruff.toml  404.html  AGENT.md  AUDIT_LOG_STANDARDS.md  CHANGELOG.md  COMMUNITY_AGENT_GUIDE.md  COMMUNITY_CONTRIBUTION_ANALYSIS.md  COMPLETE_SETUP_GUIDE.md  COMPLETION_CHECKLIST.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Dockerfile  FORK_SYNC_GUIDE.md  Jenkinsfile  LLM_PROVIDER_README.md  METADATA  Makefile  PROTOCOL_CONTRIBUTION_COMPLETE.md  PROTOCOL_CONTRIBUTION_GUIDE.md  README.md  README_AUDIT_STANDARDS.md  SECURITY_ADVISORY.md  biome.json  docker-compose.dev.yml  docker-compose.production.yml  index.html  index.md  intent-mandate.json  llms-full.txt  llms.txt  mkdocs.yml  pyproject.toml  requirements-docs.txt  sitemap.xml  uv.lock.orig  validate_security_fix.py
code/samples/python/: README.md  pyproject.toml
code/samples/python/scenarios/cross-merchant-budget/: README.md  cross_merchant_budget.py
code/samples/python/src/common/: a2a_message_builder.py  artifact_utils.py  base_server_executor.py  constants.py  function_call_resolver.py  payment_remote_a2a_client.py  retrying_llm_agent.py  server.py  validation.py  watch_log.py  x402_constants.py
code/samples/python/src/roles/credentials_provider_mcp/: server.py  (+1 more)
code/samples/python/tenzro_did_settlement/: README.md  main.py  requirements.txt  tenzro_client.py  test_main.py
samples/python/: README.md  pyproject.toml
samples/python/mock_bank/: INTEGRATION.md  README.md  __main__.py  storage.py
samples/python/mock_bank/templates/: home.html
samples/python/scenarios/a2a/negotiation/: README.md  run.sh
samples/python/scenarios/b2b/procurement/: README.md  catalog.json  main.py  run.sh
samples/python/scenarios/ghost-protocol/: intent-mandate.json
samples/python/src/: all_src_content.txt
samples/python/src/ai_curation/: negotiation_engine.py  smart_curation_engine.py
samples/python/src/analytics/: performance_analytics.py
samples/python/src/channels/: unified_chat_manager.py  whatsapp_integration.py
samples/python/src/common/: a2a_extension_utils.py  a2a_message_builder.py  artifact_utils.py  artifact_utils.py.orig  base_server_executor.py  claude_negotiator.py  config.py  function_call_resolver.py  haggle_utils.py  llm_config.py  minimax_client.py  payment_remote_a2a_client.py  retrying_llm_agent.py  server.py  server.py.orig  system_utils.py  validation.py  watch_log.py
samples/python/src/mock_bank_integration/: __init__.py  create.py  sync.py
samples/python/src/optimization/: checkout_optimizer.py
samples/python/src/roles/credentials_provider_agent/: __main__.py  account_manager.py  agent.json  agent_executor.py  tools.py
samples/python/src/roles/merchant_agent/: __main__.py  agent.json  agent.py  agent_executor.py  negotiation_workflow.py  storage.py  tools.py
samples/python/src/roles/merchant_agent_flights/: agent.json  tools.py
samples/python/src/roles/merchant_payment_processor_agent/: __main__.py  agent.json  agent_executor.py  tools.py
samples/python/src/roles/shopping_agent/: agent.py  remote_agents.py  remote_agents.py.orig  tools.py
samples/python/src/roles/shopping_agent_flights/: __init__.py  tools.py
samples/python/tests/: test_credentials_provider_security.py  test_function_call_resolver.py  test_integration_minimax.py  test_llm_config.py  test_minimax_client.py  test_negotiation.py
(+473 files in other folders)
