[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ap2-samples"
version = "0.1"
description = "Samples demonstrating the Agent Payments Protocol"
dependencies = [
    "a2a-sdk==0.3.24",
    "x402-a2a @ git+https://github.com/google-agentic-commerce/a2a-x402.git#subdirectory=python/x402_a2a",
    "absl-py==2.4.0",
    "flask==3.1.3",
    "flask-cors==6.0.2",
    "google-adk==1.28.0",
    "opentelemetry-sdk==1.38.0",
    "google-genai==1.66.0",
    "httpx==0.28.1",
    "requests==2.32.5",
    "ap2",
    "mcp==1.26.0",
    "python-dotenv==1.2.2",
    "fastmcp==3.1.0",
    "cryptography==46.0.5",
    "web3==7.15.0"
]
keywords = ["payments", "a2a", "ap2"]
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
ap2 = { workspace = true }
